<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="luis.sde.upv.es.apprestsensors.AppRestActivity"
    tools:showIn="@layout/activity_app_rest">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dir_IP"
        />
    <EditText android:id="@+id/edit_dir_IP"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_dir_IP" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_Sens"
        />
    <EditText android:id="@+id/edit_id_Sens"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_id_Sens" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_obtener_valor"
        android:onClick="obtenerValor" />
    <TextView android:id="@+id/text_valor_actual_Sens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_val_Sens"
        />
    <EditText android:id="@+id/edit_nuevo_val_Sens"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_nuevo_val_Sens" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enviar_nuevo_valor"
        android:onClick="enviarValor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_listar_valores_sensores"
        android:onClick="listarValores" />

    <TextView android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_message" />

</LinearLayout>


